	set on the data frame (needed to distiguish the response,
	 for example).

    o   print.htest() can now handle test names that are longer than
        one line 

    o	New generic functions naresid(), napredict() and naprint()
	(formerly in packages survival5 and MASS, also used in rpart).
	Also na.exclude(), a variant on na.omit() that is handled
	differently by naresid() and napredict().

    o	Generic function logLik() moved from nls to base, as well as
	logLik.lm() from nlme.


BUG FIXES

    o	Unused entry points in `src/appl/fortran.c' and `Fortran.h'
	have been removed.

    o	Unused directory `src/f2clib' and header `src/include/R_ext/f2c.h'
	have been removed.

    o	plot(1:2, xaxs = "i") now gives both "1.0" and "2.0" x-axis labels.

    o	symnum(x) behaves more reasonably for zero length or non-numeric x.

    o	R CMD INSTALL and package.description() fix some common problems
	of DESCRIPTION files (blank lines, ...)

    o	the "coef = 0" fix (PR#917) to boxplot.stats() accidentally broke
	boxplot.stats(do.out = FALSE).

    o	The documentation and parts of the parse/deparse mechanism
	indicated that there was an operator `%'. Corrected (PR#925).
    o	Fixed some cases where the deparser gave code that threw a
	syntax error when parsed.

    o	The implementation of sys.function() did not work when the
	current function was already a function (e.g., a closure).

    o	Using a pushback with more than two lines at a time could crash.

    o	hist.default() was ignoring its `probability' argument for
	equi-spaced breaks.

    o	Printing a dataframe with a column called "row.names" or
	"check.names" omitted the column.

    o	curve(* , add = FALSE) now works correctly again if used when
	par("xlog") is true.

    o	Eliminate or warn on use of .Last.value in help examples, since
	.Last.value is only set from top-level expressions (and was
	incorrectly documented).

    o	The algorithm for determining starting estimates in the SSfpl